Made the back button transparent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="emailText">Email</string>
     <string name="passwordText">Password</string>
     <string name="sign_up_text_underlined"><u>Sign up here</u></string>
+    <string name="back_button_text">Back</string>
 </resources>
